2010-10-08       Gaius Mulley <gaius@gnu.org>

	* gm2/COPYING:  updated license to GPL 3.0
	* gm2/gm2-harness/COPYING:  updated license to GPL 3.0
	* gm2/tools-src/tidydates.py:  new file.

2010-10-05       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2Range.mod:  corrected the range test for
	  the lower bounds at the end of a FOR loop.  Fixes a bug
	  reported by James Cox.
	* gm2/tools-src/tidydates.py:  new file.
	* gm2/gpl-3.0.texi:  new file.

2010-10-03       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  tidied up Copyright dates on
	* gm2/Makefile.in:  the following files.
	* gm2/config-lang.in:
	* gm2/gccgm2.c:  
	* gm2/gm2-common.c:  
	* gm2/gm2-common.h:  
	* gm2/gm2-lang.c:  
	* gm2/gm2-lang.h:  
	* gm2/gm2-tree.def:  
	* gm2/gm2-tree.h:  
	* gm2/gm2builtins.c:  
	* gm2/gm2config.h.in:  
	* gm2/gm2except.c:
	* gm2/gm2spec.c:
	* gm2/gm2version.h:
	* gm2/lang-options.h:
	* gm2/lang-specs.h:
	* gm2/m2pp.c:
	* gm2/m2pp.h:
	* gm2/examples/callingC/Makefile.in:
	* gm2/examples/callingC/hello.mod:
	* gm2/examples/callingC/libprintf.def:
	* gm2/examples/cplusplus/cppcatchm2/Makefile.in:
	* gm2/examples/cplusplus/cppcatchm2/cpp.def:
	* gm2/examples/cplusplus/cppcatchm2/m2.def:
	* gm2/examples/cplusplus/cppcatchm2/m2.mod:
	* gm2/examples/cplusplus/m2catchcpp/Makefile.in:
	* gm2/examples/cplusplus/m2catchcpp/cpp.def:
	* gm2/examples/cplusplus/m2catchcpp/m2.mod:
	* gm2/examples/cpp/Makefile.in:
	* gm2/examples/cpp/hello.mod:
	* gm2/examples/cppDef/a.def:
	* gm2/examples/cppDef/b.mod:
	* gm2/examples/executive/testexecutive.mod:
	* gm2/examples/executive/testtime.mod:
	* gm2/examples/executive/winexec.mod:
	* gm2/examples/gravity/Makefile.in:
	* gm2/examples/gravity/deviceGnuPic.def:
	* gm2/examples/gravity/deviceGnuPic.mod:
	* gm2/examples/gravity/gsl.def:
	* gm2/examples/gravity/roots.def:
	* gm2/examples/gravity/roots.mod:
	* gm2/examples/gravity/test.mod:
	* gm2/examples/gravity/testsim.py:
	* gm2/examples/gravity/twoDsim.def: