@@ -3,6 +3,13 @@
 	* gm2/COPYING:  updated license to GPL 3.0
 	* gm2/gm2-harness/COPYING:  updated license to GPL 3.0
 	* gm2/tools-src/tidydates.py:  new file.
+	* gm2/gm2spec.c:  New function (add_B_prefix).  Add
+	  -B option to the command line if -fmakeall is present
+	  and no -B option exists.  Fixes a bug reported by
+	  Martin KalbfuÃ
+	  http://lists.gnu.org/archive/html/gm2/2010-09/msg00027.html.
+	* gm2/lang-specs.h:  pass the -B option through to subcomponents
+	  if -fmakeall is used.
 
 2010-10-05       Gaius Mulley <gaius@gnu.org>
 
